@@ -1,3 +1,6 @@
+2012-01-19  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/ext/expose.jl: new expose func [Wang HonqQin]
+
 2011-10-09  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/edge/expose.jl
 	* lisp/sawfish/wm/ext/expose.jl: moved file
